<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingLeft="12dp"
        android:paddingTop="7dp"
        android:paddingRight="12dp"
        android:paddingBottom="7dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Main_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/head_image" />


    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="9dp"
        android:paddingRight="20dp"
        android:paddingBottom="6dp">

        <!-- avatar and name part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_to_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/content_to1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_to_Ex"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@id/content_to_Title"
                    android:layout_alignStart="@id/content_to_Title"
                    android:layout_alignLeft="@id/content_to_Title"
                    android:text="@string/content_to2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->

        <!-- divider line -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/content_avatar_title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:text="@string/sender_badge" />

            <ImageView
                android:id="@+id/content_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_avatar_title"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/content_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/content_avatar"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/content_avatar"
                android:layout_toRightOf="@id/content_avatar"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content_email_view"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_name_view"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="-2dp"
                android:layout_toRightOf="@id/content_avatar"
                android:text="@string/rating_mock"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="6dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->

        <!-- request button -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/btn_annotation_mock"
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/content_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="@string/request_btn_text"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>